# bedrock-core

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE-NOTES-v0.1.0-alpha.md  ROADMAP.md  SECURITY.md  pyproject.toml
docs/: DESIGN_PRINCIPLES.md  MISTAKES.md  architecture.mermaid  public-api.md  why-bedrock-core.md
docs/adr/: ADR-005-framework-application-separation.md  ADR-006-ai-runtime-vision.md  ADR-007-public-apis-are-promoted-not-invented.md
docs/decisions/: evidence-log.md
docs/validation/: feedback-tracker.md  first-user-study.md
examples/: hello_world.py  local_models.py
examples/doc-qa/: README.md  app.py
scripts/: .gitignore  update_evidence_log.py
src/bedrock_core/: __init__.py  adapter.py  app.py  capability.py  config.py  connector.py  events.py  lifecycle.py  prompt.py  retriever.py  runtime.py  stage.py  workflow.py
src/bedrock_core/providers/: anthropic.py  mock.py  ollama.py  openai.py
tests/: test_agent.py  test_architecture.py  test_ollama.py  test_workflow_and_events.py
