[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedrock-core"
version = "0.1.0"
description = "PLACEHOLDER NAME pending PyPI/GitHub/domain/trademark review. Proof-of-engineering slice: Runtime -> Capability -> Adapter, with a public App/Agent sugar API."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.40.0"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/bedrock_core"]
